Add border to table

--- a/week2/index.html
+++ b/week2/index.html
@@ -133,6 +133,12 @@
       </tbody>
     </table>
   </div>
+  <style>
+    table, th, td {
+      border-style: solid;
+      border-collapse: collapse;
+    }
+  </style>
 </body>
 
 </html>
