--- a/week2/index.html
+++ b/week2/index.html
@@ -14,9 +14,9 @@
     <p>lorem ipsum dolor sit amet</p>
   </div>
   <div class="form">
-    <input type="text" name="Text">
-    <input type="number" name="Number">
-    <input type="password" name="Password">
+    <input type="text" name="Text" placeholder="Text">
+    <input type="number" name="Number" placeholder="Number">
+    <input type="password" name="Password" placeholder="Password">
     <input type="button" value="Submit">
     <input type="checkbox" name="Checkbox" id="">
   </div>
