--- a/week2/index.html
+++ b/week2/index.html
@@ -135,7 +135,7 @@
   </div>
   <style>
     table, th, td {
-      border-style: solid;
+      border: 1px solid;
       border-collapse: collapse;
     }
   </style>
